[gd_scene load_steps=7 format=2]

[ext_resource path="res://Prepare/Stats/stats.gd" type="Script" id=1]
[ext_resource path="res://title_screen/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://img/frog2.png" type="Texture" id=3]
[ext_resource path="res://title_screen/fonts/montserrat_eb_24.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="StatsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 400 )
color = Color( 0.258824, 0.423529, 0.705882, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = 640.0
margin_bottom = 75.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Stats"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="FrogProfile" type="VBoxContainer" parent="ColorRect"]
editor/display_folded = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 99.9604
margin_top = -392.48
margin_right = 452.96
margin_bottom = 411.52
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/FrogProfile"]
margin_top = 182.0
margin_right = 353.0
margin_bottom = 542.0

[node name="FrogPicture" type="TextureRect" parent="ColorRect/FrogProfile/CenterContainer"]
margin_left = 75.0
margin_right = 278.0
margin_bottom = 360.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="FrogName" type="Label" parent="ColorRect/FrogProfile"]
margin_top = 546.0
margin_right = 353.0
margin_bottom = 621.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Frog Name"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -533.0
margin_top = 98.0
margin_right = 4.0
margin_bottom = -63.0

[node name="LevelLabel" type="Label" parent="ColorRect/VBoxContainer"]
margin_right = 537.0
margin_bottom = 50.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "Level "

[node name="Strength" type="ProgressBar" parent="ColorRect/VBoxContainer"]
margin_top = 54.0
margin_right = 537.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/bg = SubResource( 1 )
max_value = 10.0
step = 1.0
value = 6.0
rounded = true
percent_visible = false

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/Strength"]
anchor_bottom = 1.0
margin_right = 81.0
custom_fonts/font = ExtResource( 4 )
text = "STR"

[node name="Intelligence" type="ProgressBar" parent="ColorRect/VBoxContainer"]
margin_top = 106.0
margin_right = 537.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_value = 10.0
step = 1.0
value = 6.0
percent_visible = false

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/Intelligence"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "INT"

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -56.0
margin_right = 640.0
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="ColorRect/CenterContainer"]
margin_left = 580.0
margin_right = 699.0
margin_bottom = 56.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "Back"

[connection signal="pressed" from="ColorRect/CenterContainer/Button" to="." method="_on_Button_pressed"]
